--- a/Core/templates/Core/profile.html
+++ b/Core/templates/Core/profile.html
@@ -126,7 +126,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="/profile/{{request.user}}/?method=Following" class="btn btn-sm rounded-0 content" style="{% if method == 'Followings' %} border-bottom: 1.5px solid #E57851; color: #E57851; {% endif %}">Followings 
+                    <a href="/profile/{{request.user}}/?method=Followings" class="btn btn-sm rounded-0 content" style="{% if method == 'Followings' %} border-bottom: 1.5px solid #E57851; color: #E57851; {% endif %}">Followings 
                         <span>{{request.user.profile.following.all.count}}</span></a>
                 </div>
                 <div>
@@ -135,6 +135,7 @@
                 <div>
                     <a href="/profile/{{request.user}}/?method=Videos" class="btn btn-sm rounded-0 content" style="{% if method == 'Videos' %} border-bottom: 1.5px solid #E57851; color: #E57851; {% endif %}">Videos</a>
                 </div>
+               
                 <div>
                     <a href="/profile/{{request.user}}/?method=Articles" class="btn btn-sm rounded-0 content" style="{% if method == 'Articles' %} border-bottom: 1.5px solid #E57851; color: #E57851; {% endif %}">Articles</a>
                 </div>
@@ -143,7 +144,33 @@
                 </div>
             </div>
         </div>
-        {% if method == 'Articles' %}
+        {% if method == 'Post' %}
+        <div class="row">
+            <div class="col-12">
+                <div class="mt-3 d-flex justify-content-between">
+                    <div>
+                        <div style="font-size: 13px;">
+                           <a class="btn btn-sm rounded-0" href="#" style="color:#E57851; border:1px solid #E57851; border-top: none;  border-left: none;  border-right: none; "><i class="fa fa-newspaper-o"></i> Post</a>
+                        </div>
+                    </div>
+                    <div>
+                        <input onkeyup="myFunction()" id="myFilter"  class="form-control text-muted" type="text" style="font-size: 13px; border-radius:20px; width:260px;" placeholder="Search Tags, Keyword, User, Anything...">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 mt-3 col-md-12 col-lg-12 " id="myItems">
+                {% for i in home %}
+                <div class="card">
+                    <div class="card-body shadow-sm">
+
+                    </div>
+                </div>
+                {% endfor %}
+
+            </div>
+        </div>
+        {% elif method == 'Articles' %}
         <div class="row">
             <div class="col-12">
                 <div class="mt-3 d-flex justify-content-between">
@@ -586,7 +613,7 @@
                 </div>
                 </div>
                 <div class="card-footer border-0 d-flex justify-content-center p-2">
-                    <a href="/blog/" class="btn btn-sm" style="font-size: 13px;">See More ...</a>
+                    <a href="/profile/{{request.user}}/?method=Followings" class="btn btn-sm" style="font-size: 13px;">See More ...</a>
                   </div>
             </div>
             {% if activity %}
