--- a/Core/templates/Core/snippets/header.html
+++ b/Core/templates/Core/snippets/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-bg" style="height: 60px; font-size: 13px; z-index:2; box-shadow:2px 2px 10px rgb(0,0,0,0.1); background-color: white;">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-bg" style="height: 50px; font-size: 13px; z-index:2; box-shadow:2px 2px 10px rgb(0,0,0,0.1); background-color: white;">
    <div class="container">
         <!-- <a class="sidebar-toggle d-flex">
  <i class="hamburger align-self-center"></i>
@@ -167,11 +167,9 @@
            </ul>
          <ul class="navbar-nav d-flex align-items-center">
             <li class="nav-item ">
-                <a class="nav-link mr-3" style="font-weight: 600; color: #546E7A;" href="{% url 'blog' %}">Blogs</a>
+                <a class="nav-link mr-3" style="" href="{% url 'blog' %}">Blogs</a>
             </li>
-            <li class="nav-item ">
-                <a href="/blog/create/" class="nav-link mr-3 btn btn-sm rounded" style="font-weight: 600; color: #546E7A; font-size: 12px; border:1px solid #546E7A; " href="{% url 'blog' %}"><i class="fa fa-pencil"></i> Write an article</a>
-            </li>
+           
             {% if request.user.is_authenticated %}
              <!-- #region
             <li class="nav-item mr-2 mt-2">
@@ -289,10 +287,10 @@
                       -->
                       <a class="dropdown-item  pb-2 pt-2" href="/blog/create/" style="color: #546E7A; font-size: 13px;"><i class="fa fa1 fa-pencil mr-1"></i> Write an article</a>
                      
-                     <a class="dropdown-item  pb-2 pt-2" href="#" style="color: #546E7A; font-size: 13px;"><i class="fa fa1 fa-bookmark mr-1"></i> Bookmarks</a>
-                     <a class="dropdown-item  pb-2 pt-2" style="color: #546E7A; font-size: 13px;" href=" 'notification' %}"><i class="fa fa1 fa-bell mr-1"></i> Notifications</a>
+                     <a class="dropdown-item  pb-2 pt-2" href="{% url 'bookmarks' %}" style="color: #546E7A; font-size: 13px;"><i class="fa fa1 fa-bookmark mr-1"></i> Bookmarks</a>
+                     <a class="dropdown-item  pb-2 pt-2" style="color: #546E7A; font-size: 13px;" href="{% url 'notifications' %}"><i class="fa fa1 fa-bell mr-1"></i> Notifications</a>
                     
-                     <a class="dropdown-item  pb-2 pt-2" style="color: #546E7A; font-size: 13px;" href=" 'setting' %}"><i class="fa fa1 fa-cog mr-1"></i> Settings & Privacy</a>
+                     <a class="dropdown-item  pb-2 pt-2" style="color: #546E7A; font-size: 13px;" href="{% url 'settings' %}"><i class="fa fa1 fa-cog mr-1"></i> Settings & Privacy</a>
                      <div class="dropdown-divider"></div>
                      <a class="dropdown-item  pb-2 pt-2" style=" color: #E57851; font-size: 13px;" href=""><center><i class="fa fa-sign-out"></i> Log out</center></a>
                  </div>
